--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "interpolate-object": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "redis": "^5.5.6",
     "sqlite3": "^5.1.7"
