--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "aws:login": "source ./scripts/aws_login.sh",
+    "seed": "bash ./api_seeder.sh",
     "dev": "nodemon app.js"
   },
   "keywords": [],
