--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@aws-sdk/lib-dynamodb": "^3.826.0",
     "@casl/ability": "^6.7.3",
     "aws-sdk": "^2.1692.0",
-    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "interpolate-object": "^1.1.1",
