--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "interpolate-object": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "redis": "^5.5.6",
     "sqlite3": "^5.1.7"
   },
