--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "bash ./api_seeder.sh",
+    "db": "node scripts/init-db.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "redis": "^5.5.6",
+    "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
